tests/ui/const-generics/mgca/type_const-only-in-impl-omitted-type.stderr
error: missing type for `const` item
  --> $DIR/type_const-only-in-impl-omitted-type.rs:11:20
   |
LL |     type const NUM: = 84;
   |                    ^ help: provide a type for the associated constant: `usize`

error: type annotations needed for the literal
  --> $DIR/type_const-only-in-impl-omitted-type.rs:11:23
   |
LL |     type const NUM: = 84;
   |                       ^^

error: aborting due to 2 previous errors

